--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -18,7 +18,7 @@
 
 .sidebar{
     background: $sidebar-background;
-    color: black;
+    color: $font-black;
     box-shadow: 0px 0px 10px;
     position: fixed;
     top: 0;
@@ -29,6 +29,6 @@
     display: block;
     z-index: 1000;
     a{
-        color: black;
+        color: $font-black;
     }
 }
