--- a/src/app/styles/components/_variables.scss
+++ b/src/app/styles/components/_variables.scss
@@ -6,3 +6,10 @@ $headerbar-background: #466BC1;
 $button-hover-color: #3859A5;
 $button-padding: 12px;
 $logout-button-color: #FFFFFF;
+
+// Introduction stage variables
+$selection-yellow-background: #FBF38F;
+$blue: #04529D;
+$font-bold: 900;
+$black: #000000;
+$white: #FFFFFF;
